second commit menu left and animation in membership left

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div>
             <h2>Listen from our costomers </h2>
         </div>
-        <div class="row testinomial">
+        <div class="row testinomial" style="margin: 0;">
             <div class="col-md-3 test">
                 <blockquote>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sunt rerum eius harum nihil voluptatibus,
@@ -165,6 +165,72 @@
     </section>
 
     <!----------------------------MEMBERSHIP------------------------------>
+    <section class="section-plans js--section-plans" id="plans">
+        <div>
+            <h2> Be A member</h2>
+        </div>
+        <div class="plans">
+            <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+                <div class="col text-center">
+                    <div class="plan-box card">
+                        <div class="card-body">
+                            <h3 class="card-title">Premium</h3>
+                            <p class="plan-price card-text">$399 <span>/ month</span></p>
+                            <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
+                            <ul class="">
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-hungry">Sign up now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col text-center">
+                    <div class="plan-box card">
+                        <div class="card-body">
+                            <h3 class="card-title">Premium</h3>
+                            <p class="plan-price card-text">$399 <span>/ month</span></p>
+                            <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
+                            <ul class="">
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-hungry">Sign up now</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col text-center">
+                    <div class="plan-box card">
+                        <div class="card-body">
+                            <h3 class="card-title">Premium</h3>
+                            <p class="plan-price card-text">$399 <span>/ month</span></p>
+                            <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
+                            <ul class="">
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
+                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="#" class="btn btn-hungry">Sign up now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!----------------------------FORM------------------------------>
     <section>
