3rd commit menu left

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!----------------------------TESTIMONIALS------------------------------>
     <section class="section-testimonials">
         <div>
-            <h2>Listen from our costomers </h2>
+            <h2 class="mt-4">Listen from our costomers </h2>
         </div>
         <div class="row testinomial" style="margin: 0;">
             <div class="col-md-3 test">
@@ -167,21 +167,21 @@
     <!----------------------------MEMBERSHIP------------------------------>
     <section class="section-plans js--section-plans" id="plans">
         <div>
-            <h2> Be A member</h2>
+            <h2 class="mt-4"> Be A member</h2>
         </div>
         <div class="plans">
-            <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
-                <div class="col text-center">
-                    <div class="plan-box card">
+            <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center" style="margin: 0;">
+                <div class="col text-center justify-content-center pb-5">
+                    <div class="plan-box plan-box-one card">
                         <div class="card-body">
                             <h3 class="card-title">Premium</h3>
                             <p class="plan-price card-text">$399 <span>/ month</span></p>
                             <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
                             <ul class="">
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                                <li><i class="fa fa-check"></i>  1 meal every day</li>
+                                <li><i class="fa fa-check"></i>  Order 24/7</li>
+                                <li><i class="fa fa-check"></i>  Access to newest creations</li>
+                                <li><i class="fa fa-check"></i>  Free delivery</li>
                             </ul>
                         </div>
                         <div>
@@ -190,36 +190,17 @@
                     </div>
                 </div>
 
-                <div class="col text-center">
-                    <div class="plan-box card">
+                <div class="col text-center justify-content-center">
+                    <div class="plan-box plan-box-two card">
                         <div class="card-body">
                             <h3 class="card-title">Premium</h3>
                             <p class="plan-price card-text">$399 <span>/ month</span></p>
                             <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
                             <ul class="">
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
-                            </ul>
-                        </div>
-                        <div>
-                            <a href="#" class="btn btn-hungry">Sign up now</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col text-center">
-                    <div class="plan-box card">
-                        <div class="card-body">
-                            <h3 class="card-title">Premium</h3>
-                            <p class="plan-price card-text">$399 <span>/ month</span></p>
-                            <p class="plan-price-meal card-text">That's only 13.30$ per meal</p>
-                            <ul class="">
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>1 meal every day</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Order 24/7</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Access to newest creations</li>
-                                <li><i class="ion-ios-checkmark-empty icon-small"></i>Free delivery</li>
+                                <li><i class="fa fa-check"></i>  1 meal every day</li>
+                                <li><i class="fa fa-check"></i>  Order 24/7</li>
+                                <li><i class="fa fa-check"></i>  Access to newest creations</li>
+                                <li><i class="fa fa-check"></i>  Free delivery</li>
                             </ul>
                         </div>
                         <div>
