--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
                 <div class="container">
                     <!-- navigation bar -->
                     <nav class="navbar navbar-expand-sm navbar-dark">
-                        <a class="navbar-brand" href="#home"><h3 style="font-family:Snap ITC">Imagine</h2></a>
+                        <a class="navbar-brand" href="#home"><h3 style="font-family:Snap ITC">Imagine food</h2></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <div class="collapse navbar-collapse" id="navbarTogglerDemo02" style="flex-flow: row-reverse;" >
                             <ul class="navbar-nav" >
-                                <li class="nav-item"><a class="nav-link" href="#about" target="_blank">ABOUT</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#about">ABOUT</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#menu">MENU</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#testimonial">TESTIMONIAL</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#plans">MEMBERSHIP</a></li>
