--- a/index.html
+++ b/index.html
@@ -321,6 +321,9 @@
                     </div>
                 </div>
             </div>
+            <div class="row justify-content-center mt-5">
+                <a href="./resources/setup/menu.html"><button class="btn btn-outline-light"> MORE MENU </button></a>
+            </div>
         </div>
 
     </section>
