--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url=https://debopriyadey.github.io/ImagineFood/" />
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
 
     <!-- fontawesome css -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
