--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                         <div class="col-12">
                             <div class="hero-text-box ">
                                 <h1>Say Hello <br>To the best you can get</h1>
-                                <a href="./resources/setup/menu.html" class="btn btn-outline-light my-3">Take me to Menu</a>
+                                <a href="./resources/menu/menu.html" class="btn btn-outline-light my-3">Take me to Menu</a>
                             </div>
                         </div>
                     </div>
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <div class="row justify-content-center mt-5">
-                <a href="./resources/setup/menu.html"><button class="btn btn-outline-light"> MORE MENU </button></a>
+                <a href="./resources/menu/menu.html"><button class="btn btn-outline-light"> MORE MENU </button></a>
             </div>
         </div>
 
