--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             </div>
         </div>
         <hr>
-        <p class="text-center pt-4 pb-1" style="color:aliceblue">&copy; created by DEBOPRIYA DEY </p>
+        <p class="text-center pt-4 pb-1" style="color:aliceblue">&copy; created by <a href="debopriyadey.github.io" target="_blank">DEBOPRIYA DEY</a></p>
             
     </footer>
 
