--- a/resources/menu/menu.html
+++ b/resources/menu/menu.html
@@ -70,21 +70,17 @@
         </ul>
         <div class="carousel-inner" style="border:0px solid;">
           <div class="carousel-item active">
-            <img src="../setup/images/offer3.jpg" alt="Los Angeles" width="100%" height="300">
+            <img src="../menu/images/offer1.jpg" alt="Los Angeles" width="100%" height="300">
             <div class="carousel-caption">
-              <p> ######</p>
             </div>   
           </div>
           <div class="carousel-item">
-            <img src="../setup/images/offer2.jpg" alt="Chicago" width="100%" height="300">
-            <div class="carousel-caption">
-              <p> ######</p>
-            </div>   
+            <img src="../menu/images/offer2.jpg" alt="Chicago" width="100%" height="300">
+            <div class="carousel-caption">            </div>   
           </div>
           <div class="carousel-item">
-              <img src="../setup/images/offer1.jpg" alt="New York" width="100%" height="300">
+              <img src="../menu/images/offer1.jpg" alt="New York" width="100%" height="300">
               <div class="carousel-caption">
-                <p> ######</p>
               </div>   
             </div>
           </div>
