--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
                 <div class=" col-sm-4 col-md  col-6 col footer-nav" style="display: inline-grid;">
                     <h5 class="pt2">Quick links</h5>
                     <a href="#about">About</a>
-                    <a href="./resources/setup/menu.html">Menu</a>
+                    <a href="./resources/menu/menu.html">Menu</a>
                     <a href="#testimonial">Testimonial</a>
                     <a href="#plans">Membership</a>
                     <a href="#contact">Contact</a>
